# fsfw

./: .clang-format  .gitignore  .gitmodules  CHANGELOG  CHANGELOG.md  CMakeLists.txt  FSFWVersion.h  NOTICE  README.md  THANKYOU  framework.mk  fsfw.mk  platform.h
hal/: CMakeLists.txt
hal/inc/: CMakeLists.txt
hal/src/: CMakeLists.txt
osal/: CMakeLists.txt  Endiness.h  InternalErrorCodes.h  OSAL.cpp  OSAL.h  OperatingSystemIF.h
osal/FreeRTOS/: BinSemaphUsingTask.cpp  BinSemaphUsingTask.h  BinarySemaphore.cpp  BinarySemaphore.h  BinarySempahore.h  CMakeLists.txt  Clock.cpp  CountingSemaphUsingTask.cpp  CountingSemaphUsingTask.h  CountingSemaphore.cpp  CountingSemaphore.h  FixedTimeslotTask.cpp  FixedTimeslotTask.h  FreeRTOSTaskIF.h  MessageQueue.cpp  MessageQueue.h  Mutex.cpp  Mutex.h  MutexFactory.cpp  PeriodicTask.cpp  PeriodicTask.h  QueueFactory.cpp  QueueMapManager.cpp  QueueMapManager.h  README.md  SemaphoreFactory.cpp  TaskFactory.cpp  TaskManagement.cpp  TaskManagement.h  Timekeeper.cpp  Timekeeper.h  main.cpp
osal/Linux/: Clock.cpp
osal/common/: CMakeLists.txt  TcpIpBase.cpp  TcpIpBase.h  TcpTmTcBridge.cpp  TcpTmTcBridge.h  TcpTmTcServer.cpp  TcpTmTcServer.h  UdpTcPollingTask.cpp  UdpTcPollingTask.h  UdpTmTcBridge.cpp  UdpTmTcBridge.h  tcpipCommon.cpp  tcpipCommon.h  tcpipHelpers.h
osal/host/: CMakeLists.txt  Clock.cpp  FixedTimeslotTask.cpp  FixedTimeslotTask.h  MessageQueue.cpp  MessageQueue.h  Mutex.cpp  Mutex.h  MutexFactory.cpp  PeriodicTask.cpp  PeriodicTask.h  QueueFactory.cpp  QueueMapManager.cpp  QueueMapManager.h  SemaphoreFactory.cpp  TaskFactory.cpp  TmTcWinUdpBridge.cpp  TmTcWinUdpBridge.h  taskHelpers.h
osal/linux/: BinarySemaphore.cpp  BinarySemaphore.h  CMakeLists.txt  Clock.cpp  CountingSemaphore.cpp  CountingSemaphore.h  FixedTimeslotTask.cpp  FixedTimeslotTask.h  InternalErrorCodes.cpp  MessageQueue.cpp  MessageQueue.h  Mutex.cpp  Mutex.h  MutexFactory.cpp  PeriodicPosixTask.cpp  PeriodicPosixTask.h  PosixThread.cpp  PosixThread.h  QueueFactory.cpp  SemaphoreFactory.cpp  TaskFactory.cpp  TcUnixUdpPollingTask.cpp  TcUnixUdpPollingTask.h  Timer.cpp  TmTcUnixUdpBridge.cpp  TmTcUnixUdpBridge.h  tcpipHelpers.cpp  tcpipHelpers.h  unixUtility.h
osal/rtems/: CMakeLists.txt  Clock.cpp  CpuUsage.cpp  CpuUsage.h  FixedTimeslotTask.cpp  FixedTimeslotTask.h  InitTask.cpp  InitTask.h  InternalErrorCodes.cpp  Interrupt.cpp  Interrupt.h  MessageQueue.cpp  MessageQueue.h  MultiObjectTask.cpp  MultiObjectTask.h  Mutex.cpp  Mutex.h  MutexFactory.cpp  PeriodicTask.cpp  PollingTask.cpp  PollingTask.h  QueueFactory.cpp  RTEMSTaskBase.cpp  RTEMSTaskBase.h  RtemsBasic.cpp  RtemsBasic.h  TaskBase.cpp  TaskBase.h  TaskFactory.cpp
osal/windows/: CMakeLists.txt  TcWinTcpServer.cpp  TcWinTcpServer.h  TcWinUdpPollingTask.cpp  TcWinUdpPollingTask.h  TmTcWinUdpBridge.cpp  TmTcWinUdpBridge.h  tcpipHelpers.cpp  tcpipHelpers.h  winTaskHelpers.cpp  winTaskHelpers.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/fsfw/: CMakeLists.txt  FSFW.h  FSFW.h.in  FSFWVersion.h  FSFWVersion.h.in  action.h  cfdp.h  datapoollocal.h  filesystem.h  health.h  housekeeping.h  objectmanager.h  retval.h  serialize.h  serviceinterface.h  version.cpp  version.h
src/fsfw_hal/: CMakeLists.txt
src/fsfw_tests/: CMakeLists.txt
src/opt/: CMakeLists.txt
src/osal/: CMakeLists.txt
src/tests/: lcov.sh
unittest/user/: CMakeLists.txt
unittests/: CMakeLists.txt  CatchDefinitions.cpp  CatchDefinitions.h  CatchFactory.cpp  CatchRunner.cpp  CatchSetup.cpp  lcov_epilog.html  testVersion.cpp
unittests/action/: CMakeLists.txt  TestActionHelper.cpp  TestActionHelper.h
unittests/cfdp/: CMakeLists.txt  testAckPdu.cpp  testCfdp.cpp  testCfdpHeader.cpp  testDestHandler.cpp  testDistributor.cpp  testEofPdu.cpp  testFileData.cpp  testFileDirective.cpp  testFinishedPdu.cpp  testKeepAlivePdu.cpp  testLvs.cpp  testMetadataPdu.cpp  testNakPdu.cpp  testOtherTlvs.cpp  testPromptPdu.cpp  testSourceHandler.cpp  testTlv.cpp  testTlvsLvs.cpp
unittests/container/: CMakeLists.txt  RingBufferTest.cpp  TestArrayList.cpp  TestDynamicFifo.cpp  TestFifo.cpp  TestFixedArrayList.cpp  TestFixedMap.cpp  TestFixedOrderedMultimap.cpp  TestPlacementFactory.cpp
unittests/datapoollocal/: CMakeLists.txt  DataSetTest.cpp  LocalPoolManagerTest.cpp  LocalPoolOwnerBase.cpp  LocalPoolVariableTest.cpp  LocalPoolVectorTest.cpp  testDataSet.cpp  testLocalPoolManager.cpp  testLocalPoolVariable.cpp  testLocalPoolVector.cpp
unittests/devicehandler/: CMakeLists.txt  ComIFMock.cpp  ComIFMock.h  CookieIFMock.cpp  CookieIFMock.h  DeviceFdirMock.cpp  DeviceHandlerCommander.cpp  DeviceHandlerCommander.h  DeviceHandlerMock.cpp  TestDeviceHandlerBase.cpp
unittests/globalfunctions/: CMakeLists.txt  testBitutil.cpp  testCRC.cpp  testDleEncoder.cpp  testTimevalOperations.cpp
unittests/hal/: CMakeLists.txt  testCommandExecutor.cpp  testFsMock.cpp  testHostFilesystem.cpp
unittests/internalerror/: CMakeLists.txt  TestInternalErrorReporter.cpp
unittests/mocks/: AcceptsTcMock.cpp  AcceptsTcMock.h  AcceptsTmMock.cpp  AcceptsTmMock.h  CMakeLists.txt  CcsdsCheckerMock.cpp  CcsdsCheckerMock.h  CdsShortTimestamperMock.h  CfdpFaultHandlerMock.cpp  CfdpFaultHandlerMock.h  ComIFMock.cpp  DeviceFdirMock.cpp  DeviceFdirMock.h  DeviceHandlerMock.cpp  DeviceHandlerMock.h  EventReportingProxyMock.cpp  EventReportingProxyMock.h  FilesystemMock.cpp  FilesystemMock.h  HkReceiverMock.h  InternalErrorReporterMock.cpp  InternalErrorReporterMock.h  LocalPoolOwnerBase.cpp  LocalPoolOwnerBase.h  MessageQueueMock.cpp  MessageQueueMock.h  MessageQueueMockBase.cpp  MessageQueueMockBase.h  PeriodicTaskIFMock.h  PowerSwitcherMock.cpp  PusDistributorMock.cpp  PusDistributorMock.h  PusServiceBaseMock.cpp  PusServiceBaseMock.h  PusVerificationReporterMock.cpp  PusVerificationReporterMock.h  SimpleSerializable.h  StorageManagerMock.cpp  StorageManagerMock.h
unittests/osal/: CMakeLists.txt  TestClock.cpp  TestMessageQueue.cpp  TestSemaphore.cpp  testMq.cpp
unittests/power/: CMakeLists.txt  testPowerSwitcher.cpp
unittests/pus/: CMakeLists.txt  (+1 more)
(+2566 files in other folders)
